# redbit

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  verify_api.py
backend/: .dockerignore  Makefile  docker-compose.yml  env.example  pyproject.toml  setup_social_app.py
backend/redbit/: manage.py  private_key.pem  reset_password.py  seed_communities.py  test_social_auth.py
backend/redbit/apps/: __init__.py
backend/redbit/apps/communities/: admin.py  models.py
backend/redbit/apps/communities/migrations/: 0001_initial.py  0002_initial.py
backend/redbit/apps/notifications/: models.py  services.py
backend/redbit/apps/notifications/migrations/: 0001_initial.py
backend/redbit/apps/posts/: admin.py  models.py
backend/redbit/apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_post_image.py
backend/redbit/apps/storage/: s3.py
backend/redbit/apps/users/: admin.py  models.py  urls.py  views.py
backend/redbit/apps/users/migrations/: 0001_initial.py  0002_user_dark_mode_user_is_online_user_last_seen_and_more.py
backend/redbit/apps/users/templates/: social_callback.html
backend/redbit/apps/votes/: apps.py  models.py
backend/redbit/apps/votes/migrations/: 0001_initial.py  0002_vote_votes_content_a606f3_idx_and_more.py
backend/redbit/core/: models.py
backend/redbit/graphql_api/: consumers.py  jwt.py  middleware.py  permissions.py  routing.py  schema.py  validators.py
backend/redbit/graphql_api/communities/: mutations.py  schema.py  types.py
backend/redbit/graphql_api/notifications/: mutations.py  schema.py  subscriptions.py  types.py
backend/redbit/graphql_api/posts/: mutations.py  schema.py  types.py
backend/redbit/graphql_api/search/: schema.py
backend/redbit/graphql_api/users/: mutations.py  schema.py  types.py
backend/redbit/redbit/: asgi.py  celery.py  urls.py  wsgi.py
backend/redbit/redbit/settings/: base.py  local.py  production.py
backend/redbit/tasks/: backup.py  email.py  notifications.py
docker/: entrypoint.sh
frontend/: app.json  package.json  (+4 more)
(+63 files in other folders)
